Refactor CheckmateDetector.java